--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: "Segoe UI", Roboto, Arial, sans-serif;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            background: linear-gradient(180deg,#0f2027 0%,#162a35 40%,#203a43 70%,#2c5364 100%);
             color: #333;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
