--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
     <title>Comunicado Oficial | Migração de Plataforma</title>
 
     <style>
+        /* ===== FUNDO GLOBAL (SEM QUEBRA AO ROLAR) ===== */
+        html {
+            min-height: 100%;
+            background: linear-gradient(
+                180deg,
+                #0f2027 0%,
+                #162a35 40%,
+                #203a43 70%,
+                #2c5364 100%
+            );
+        }
+
         html, body {
-            height: 100%;
-            margin: 0;
+            min-height: 100%;
         }
 
         body {
+            margin: 0;
             font-family: "Segoe UI", Roboto, Arial, sans-serif;
-            background: linear-gradient(180deg,#0f2027 0%,#162a35 40%,#203a43 70%,#2c5364 100%);
             color: #333;
+            background: transparent;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
 
+        /* ===== CONTAINER PRINCIPAL ===== */
         .container {
             max-width: 900px;
             min-height: 100vh;
@@ -31,6 +44,7 @@
             flex-direction: column;
         }
 
+        /* ===== HEADER ===== */
         .header {
             background: #0b3c5d;
             color: #ffffff;
@@ -50,6 +64,7 @@
             opacity: 0.9;
         }
 
+        /* ===== CONTEÚDO ===== */
         .content {
             padding: 40px;
             line-height: 1.6;
@@ -91,6 +106,7 @@
             margin-bottom: 15px;
         }
 
+        /* ===== CONTADOR ===== */
         .contador {
             background: #fff8e1;
             border: 1px solid #ffe082;
@@ -104,6 +120,7 @@
             color: #b00000;
         }
 
+        /* ===== BOTÃO ===== */
         .botao {
             display: inline-block;
             margin-top: 20px;
@@ -125,6 +142,7 @@
             outline-offset: 3px;
         }
 
+        /* ===== FOOTER ===== */
         .footer {
             background: #f4f6f8;
             padding: 25px 40px;
@@ -136,7 +154,7 @@
             color: #000;
         }
 
-        /* Responsividade */
+        /* ===== RESPONSIVIDADE ===== */
         @media (max-width: 768px) {
             .container {
                 border-radius: 0;
